# py-spdx-license

./: README.md  data.json  pyproject.toml
.github/workflows/: coverage-generate.yaml  test.yaml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_64e0d43718254543___init___py.html  z_64e0d43718254543___main___py.html  z_64e0d43718254543_ast_py.html  z_64e0d43718254543_cli_py.html  z_64e0d43718254543_version_py.html
src/py_spdx_license/: __init__.py  __main__.py  ast.py  cli.py
tests/: test_cli.py  test_lint.py  test_parse_error.py  test_sort.py
